# backend/internal/api/controllers/todos.go
@@ -15,46 +15,6 @@ func NewTodos(service *services.Todos) *Todos {
 	return &Todos{service}
 }
 
-// Find godoc
-// @Summary Find todos
-// @Description Find todos
-// @Tags todos
-// @Accept json
-// @Produce json
-// @Success 200 {array} dto.Todo
-// @Failure 400 {object} errs.HTTPError
-// @Router /todos [get]
-func (t *Todos) Find(c *fiber.Ctx) error {
-	todos, err := t.service.Find()
-	if err != nil {
-		return err
-	}
-	return c.Status(200).JSON(todos)
-}
-
-// FindOneById godoc
-// @Summary Find todo by id
-// @Description Find todo by id
-// @Tags todos
-// @Accept json
-// @Produce json
-// @Param id path int true "Todo ID"
-// @Success 200 {object} dto.Todo
-// @Failure 400 {object} errs.HTTPError
-// @Failure 404 {object} errs.HTTPError
-// @Router /todos/{id} [get]
-func (t *Todos) FindOneById(c *fiber.Ctx) error {
-	id, err := c.ParamsInt("id")
-	if err != nil {
-		return &errs.HTTPError{Code: 400, Message: "Invalid id"}
-	}
-	todo, err := t.service.FindOneById(id)
-	if err != nil {
-		return err
-	}
-	return c.Status(200).JSON(todo)
-}
-
 // Create godoc
 // @Summary Create todo
 // @Description Create todo
