# backend/internal/api/routes/todos.go
@@ -7,8 +7,6 @@ import (
 
 func Todos(controller *controllers.Todos, app fiber.Router, authMw func(*fiber.Ctx) error) fiber.Router {
 	return app.Route("/todos", func(todos fiber.Router) {
-		todos.Get("/", controller.Find)
-		todos.Get("/:id", controller.FindOneById)
 		todos.Post("/", authMw, controller.Create)
 		todos.Put("/:id", authMw, controller.Update)
 		todos.Delete("/:id", authMw, controller.Delete)
